add contact info

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,3 +64,7 @@
   -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
   mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
 }
+
+.grayscale {
+  filter:grayscale(1);
+}
